feat: consumer 集群消费